--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="AgentFlow" />
     <meta name="keywords" content="AI Engineer, Automation, LangChain, LangGraph, Multi-Agent Systems, RAG, Machine Learning" />
     <link rel="canonical" href="https://agentflow.dev" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%23685FFF' width='100' height='100' rx='20'/><text x='50' y='65' font-size='60' font-weight='bold' fill='white' text-anchor='middle' font-family='Arial'>A</text></svg>" />
 
     <meta property="og:title" content="AgentFlow | Agentic AI & Automation Engineer" />
     <meta property="og:description" content="Building intelligent autonomous systems with multi-agent AI and enterprise automation." />
